hphp/hack/test/typecheck/constraints/constraint_override_bad3.php.like_types.exp
File "constraint_override_bad3.php", line 18, characters 19-21:
Member foo has the wrong type (Typing[4341])
File "constraint_override_bad3.php", line 18, characters 73-73:
Expected A
File "constraint_override_bad3.php", line 18, characters 73-73:
Considering that this type argument is invariant with respect to GB
File "constraint_override_bad3.php", line 7, characters 20-20:
But got dynamic because it is an unenforceable type
File "constraint_override_bad3.php", line 24, characters 19-21:
Member foo has the wrong type (Typing[4341])
File "constraint_override_bad3.php", line 24, characters 73-73:
Expected B
File "constraint_override_bad3.php", line 23, characters 14-15:
But got Tz
File "constraint_override_bad3.php", line 24, characters 67-68:
  via this generic Tz
